# rejot

./: .dockerignore  .gitattributes  .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  RELEASE.md  cloudbuild.yaml  entrypoint.sh  eslint.config.mjs  lefthook.yml  package-lock.json  package.json  prettier.config.mjs  rejot-manifest.json  tsconfig.base.json  tsconfig.json  tsconfig.publish.json
.cursor/: mcp.json
.cursor/rules/: controller-app.mdc  exception-handling.mdc  monorepo.mdc  single-page-application.mdc  static-site.mdc
.github/workflows/: build-and-publish.yml  ci.yml  gcp.yml  npm.yml  python.yml
apps/controller/: .gitignore  _config.example.json  docker-compose.yaml  drizzle.config.ts  old-deno.json  package.json  seed.ts  tsconfig.json
apps/controller-spa/: .env.example  components.json  eslint.config.js  index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts  vitest.config.ts
apps/mcp/: .gitignore  README.md  index.ts  package.json  rejot-manifest.json  rejot-mcp-client.ts  rejot-mcp.ts  tsconfig.json
apps/rejot-cli/: .gitignore  README.md  cli-schema.json  package.json  tsconfig.json
apps/static-site/: astro.config.mjs  (+3 more)
python/: .gitignore  README.md  pyproject.toml
python/src/rejot_contract/: consumer_schema.py  public_schema.py
python/src/rejot_contracts/: consumer_schema.py  public_schema.py
scripts/: animate-svg-paths.ts  check-dockerfile-packages.ts  check-ts-changes.ts  check-workspace-refs.ts  eslint-plugin-local-import-check.mjs  list_workspace_packages.sh  version-bump.ts  workspace-utils.ts
(+548 files in other folders)
